<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="24dp"
    tools:context=".MainActivity">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/l_code"
        android:hint="@string/code"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_code"
            android:layout_width="match_parent"
            android:inputType="number"
            android:layout_height="match_parent"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/l_description"
        android:hint="@string/description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_description"
            android:layout_width="match_parent"
            android:inputType="text"
            android:layout_height="match_parent"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/l_price"
        android:hint="@string/price"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_price"
            android:layout_width="match_parent"
            android:inputType="numberDecimal"
            android:layout_height="match_parent"/>
    </com.google.android.material.textfield.TextInputLayout>

    
    <com.google.android.material.button.MaterialButton
        android:id="@+id/add_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/Widget.AppCompat.Button.Colored"
        android:onClick="add"
        android:text="@string/add"/>
    <com.google.android.material.button.MaterialButton
        android:id="@+id/search_code_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/Widget.AppCompat.Button.Colored"
        android:onClick="searchByCode"
        android:text="@string/code_search"/>
    <com.google.android.material.button.MaterialButton
        android:id="@+id/search_description_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="searchByDescription"
        style="@style/Widget.AppCompat.Button.Colored"
        android:text="@string/description_search"/>
    <com.google.android.material.button.MaterialButton
        android:id="@+id/remove_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/Widget.AppCompat.Button.Colored"
        android:onClick="remove"
        android:text="@string/remove"/>
    <com.google.android.material.button.MaterialButton
        android:id="@+id/edit_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/Widget.AppCompat.Button.Colored"
        android:onClick="edit"
        android:text="@string/edit"/>
</LinearLayout>